Prima bozza index.html

--- a/index.html
+++ b/index.html
@@ -1,59 +1,42 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <!-- Assicura la corretta codifica dei caratteri -->
     <meta charset="UTF-8" />
-    <!-- Rende la pagina responsive su tutti i dispositivi -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Titolo visibile nella tab del browser -->
     <title>Caudalie – Download Report di Sostenibilità</title>
-    <!-- Collegamento al foglio di stile esterno -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HEADER: Sezione hero con immagine evocativa del brand -->
-    <header class="hero">
-      <!-- Titolo principale che introduce la pagina di download -->
-      <h1>Report di Sostenibilità Caudalie</h1>
-      <!-- Sottotitolo che enfatizza l’impegno eco-friendly -->
-      <p>Esplora il nostro percorso verso una bellezza responsabile</p>
+    <header class="main-header">
+      <p> Esplora il nostro percorso verso una bellezza responsabile </p>
     </header>
 
-    <!-- MAIN: Contenuto centrale con lista dei documenti scaricabili -->
     <main>
+      <section class="hero-vineyard">
+        <div class="hero-content">
+            <p></p>
+        </div>
+      </section>
+
       <section class="report-download">
-        <!-- Titolo della sezione download -->
-        <h2>Scarica i report annuali</h2>
-        <!-- Lista non ordinata dei link di download -->
+        <h1>Report di Sostenibilità 2024</h1>
         <ul class="download-list">
           <li>
-            <!-- Link con attributo download per forzare il salvataggio -->
-            <a href="reports/Caudalie_Report_Sostenibilita_2020.pdf" class="download-button" download>
-              Report 2020
-            </a>
-          </li>
-          <li>
-            <a href="reports/Caudalie_Report_Sostenibilita_2021.pdf" class="download-button" download>
-              Report 2021
-            </a>
-          </li>
-          <li>
-            <a href="reports/Caudalie_Report_Sostenibilita_2022.pdf" class="download-button" download>
-              Report 2022
-            </a>
-          </li>
-          <li>
-            <a href="reports/Caudalie_Report_Sostenibilita_2023.pdf" class="download-button" download>
-              Report 2023
+            <a href="doc/BOOK_RSE_2024 VE.pdf" class="download-button" download>
+              Download
             </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <!-- FOOTER: Informazioni legali e copyright -->
     <footer>
-      <p>&copy; 2025 Caudalie. Tutti i diritti riservati.</p>
+        <p>
+         2025 Giorgia Mistretta.
+        </p>
+        <p>
+        Tutti i marchi riportati appartengono ai legittimi proprietari; marchi di terzi, nomi di prodotti, nomi commerciali, nomi corporativi e società citati possono essere marchi di proprietà dei rispettivi titolari o marchi registrati d’altre società e sono stati utilizzati a puro scopo esplicativo e senza alcun fine di violazione dei diritti di Copyright vigenti.
+        </p>
     </footer>
   </body>
 </html>
