--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
           </li>
         </ul>
       </section>
+
+      <h2>Una panoramica completa della nostra mission,
+                rispettosa del pianeta e dell'uomo.</h2>
+                
+        <div class="video-container">
+            <video autoplay loop muted>
+            <source src="img/video.mp4" type="video/mp4">
+            Il tuo browser non supporta il video.
+            </video>
+        </div>
     </main>
 
     <footer>
