--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
             </a>
           </li>
         </ul>
-      </section>
-          
-<!--    <div class="video-container">
-            <video autoplay loop muted>
-            <source src="img/video.mp4" type="video/mp4">
-            Il tuo browser non supporta il video.
-            </video>
-      </div> -->  
+      </section>  
 
       <h2>Una panoramica completa della nostra mission, rispettosa del pianeta e dell'uomo.</h2>
 
@@ -64,6 +57,13 @@
                   che la salute dei consumatori, e supporta pratiche agricole più sostenibili e rigenerative.</p>
             </div>
         </section>
+
+            <div class="video-container">
+            <video autoplay loop muted>
+            <source src="img/video.mp4" type="video/mp4">
+            Il tuo browser non supporta il video.
+            </video>
+      </div> 
 
        <h3 class="no-listh3">Un Impegno Senza Compromessi</h3>
        
