--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
             
             <div class="text-container">
                 <p>
-                  <span style="color:#8a1c67;">Caudalie</span> si distingue per il suo impegno intransigente a offrire formule che siano il più possibile naturali, 
+                  <strong><span style="color: #896e8b;">Caudalie</span></strong> si distingue per il suo impegno intransigente a offrire formule che siano il più possibile naturali, 
                   privilegiando l'utilizzo di ingredienti attivi derivati direttamente dal regno vegetale, in particolare dalla vite e dall'uva. 
                   Questo approccio non è solo una tendenza, ma una convinzione profonda che ha guidato l'azienda fin dalla sua nascita.
-                  <br><span style="color:#8a1c67;">Alta Percentuale di Ingredienti Naturali</span>: Una delle metriche più impressionanti è che tra il 95% e 
+                  <br><strong><span style="color: #896e8b;">Alta Percentuale di Ingredienti Naturali</span></strong>: Una delle metriche più impressionanti è che tra il 95% e 
                   il 100% degli ingredienti utilizzati in tutti i trattamenti Caudalie 
                   (con l'eccezione specifica dei prodotti solari, che richiedono formulazioni particolari per garantire la protezione UV) sono di origine naturale. 
                   Questo posiziona Caudalie all'avanguardia della <em>"clean beauty"</em>, 
                   garantendo che la maggior parte delle sostanze a contatto con la pelle provenga direttamente dalla natura.
-                  <br><span style="color:#8a1c67;">Valorizzazione degli Estratti della Vite Francese</span>: L'azienda si impegna a utilizzare il 100% 
+                  <br><strong><span style="color: #896e8b;">Valorizzazione degli Estratti della Vite Francese</span></strong>: L'azienda si impegna a utilizzare il 100% 
                   degli estratti di vite di origine francese nei suoi brevetti esclusivi. 
                   Questo non solo garantisce la tracciabilità e la qualità degli ingredienti, ma celebra anche l'eredità vinicola francese e il legame 
                   intrinseco di Caudalie con il suo territorio d'origine. 
                   I polifenoli dell'uva, il resveratrolo, la viniferina e l'acqua d'uva sono solo alcuni degli ingredienti brevettati che derivano da questa risorsa preziosa.
-                  <br><span style="color:#8a1c67;">Priorità all'Agricoltura Biologica</span>: Un notevole 82% delle materie prime a base di vite utilizzate da Caudalie 
+                  <br><strong><span style="color: #896e8b;">Priorità all'Agricoltura Biologica</span></strong>: Un notevole 82% delle materie prime a base di vite utilizzate da Caudalie 
                   provengono da agricoltura biologica. Questa scelta riduce l'esposizione a pesticidi e fertilizzanti chimici, proteggendo sia l'ambiente 
                   che la salute dei consumatori, e supporta pratiche agricole più sostenibili e rigenerative.</p>
             </div>
@@ -74,19 +74,19 @@
             
              <div class="text-container2">
                 <p>
-                   La <span style="color:#d00707;">NO-List</span> di Caudalie è un elenco esaustivo di oltre <strong>70 sostanze</strong> o famiglie di sostanze che sono state bandite dalle loro formulazioni. 
+                   La <strong><span style="color:#d00707;">NO-List</span></strong> di Caudalie è un elenco esaustivo di oltre <strong>70 sostanze</strong> o famiglie di sostanze che sono state bandite dalle loro formulazioni. 
                    Questa lista è il risultato di una ricerca approfondita e di un'attenta valutazione scientifica, e include ingredienti che sono stati identificati come 
                    potenzialmente controversi o dannosi per la salute umana o per l'ambiente. 
                    Invece di utilizzare queste sostanze, Caudalie predilige solo ingredienti essenziali, minimizzando i componenti non necessari e garantendo la massima purezza.
-                   <br><span style="color:#d00707;">Oli Minerali</span>: Tradizionalmente utilizzati in molti cosmetici per le loro proprietà emollienti, gli oli minerali (derivati dal petrolio) sono stati eliminati da Caudalie. 
+                   <br><strong><span style="color:#d00707;">Oli Minerali</span></strong>: Tradizionalmente utilizzati in molti cosmetici per le loro proprietà emollienti, gli oli minerali (derivati dal petrolio) sono stati eliminati da Caudalie. 
                    Sono stati sostituiti con oli vegetali, come l'olio di vinaccioli d'uva, l'olio di girasole o l'olio di jojoba. Questi oli sono più affini alla pelle, facilmente assorbibili 
                    e spesso estratti con metodi più delicati e meno impattanti sull'ambiente.
-                   <br><span style="color:#d00707;">Parabeni e Fenossietanolo</span>: Questi conservanti, spesso oggetto di dibattito sulla loro sicurezza, sono completamente assenti nelle formule Caudalie. 
-                   <br><span style="color:#d00707;">Ingredienti di Origine Animale</span>: Escludendo i derivati apistici, Caudalie ha eliminato tutti gli altri ingredienti di origine animale dalle proprie formulazioni. 
+                   <br><strong><span style="color:#d00707;">Parabeni e Fenossietanolo</span></strong>: Questi conservanti, spesso oggetto di dibattito sulla loro sicurezza, sono completamente assenti nelle formule Caudalie. 
+                   <br><strong><span style="color:#d00707;">Ingredienti di Origine Animale</span></strong>: Escludendo i derivati apistici, Caudalie ha eliminato tutti gli altri ingredienti di origine animale dalle proprie formulazioni. 
                    Vengono invece utilizzati ingredienti naturali derivati da piante e minerali, che offrono proprietà analoghe o superiori senza ricorrere a sfruttamento animale.
-                   <br><span style="color:#d00707;">Ftalati</span>: Questi composti chimici, spesso usati per dare elasticità alla plastica o come solventi, sono completamente esclusi.
+                   <br><strong><span style="color:#d00707;">Ftalati</span></strong>: Questi composti chimici, spesso usati per dare elasticità alla plastica o come solventi, sono completamente esclusi.
                    Queste alternative sono non solo più sicure per l'uomo, ma anche biodegradabili.
-                   <br><span style="color:#d00707;">Sodium Laureth Sulfate (SLS)</span>: Un tensioattivo comune che può essere irritante per alcune pelli, l'SLS è stato sostituito con tensioattivi derivati dalla chimica verde.</p>
+                   <br><strong><span style="color:#d00707;">Sodium Laureth Sulfate (SLS)</span></strong>: Un tensioattivo comune che può essere irritante per alcune pelli, l'SLS è stato sostituito con tensioattivi derivati dalla chimica verde.</p>
             </div>
        </section> 
 
@@ -163,8 +163,8 @@
     </div>
 
     <div class="altri-impegni-ambiente">
-        <p><strong><span style= "color: #0a3b0a">Un altro esempio dell'impegno di Caudalie per l'ambiente:</span></strong></p>
-        <p><strong>Impegno per "1% for the Planet": Riforestazione e Biodiversità</strong>
+        <p><strong>Un altro esempio dell'impegno di Caudalie per l'ambiente:</strong></p>
+        <p><strong><span style= "color: #0a3b0a">Impegno per "1% for the Planet": Riforestazione e Biodiversità</strong></span>
         <br>Il programma "1% for the Planet" è uno dei pilastri dell'impegno ambientale di Caudalie,
         un'iniziativa che va oltre la semplice compensazione delle emissioni. Dal 2012, Caudalie dona l'1% del proprio fatturato annuale
         a organizzazioni no-profit dedicate alla protezione e al ripristino delle foreste e della loro biodiversità.
@@ -172,7 +172,7 @@
         Attraverso questa partnership, Caudalie ha contribuito a piantare oltre 12 milioni di alberi in più di 15 paesi in tutto il mondo.
         Questo impegno globale si concentra in particolare su regioni ad alto rischio di deforestazione, dove l'azione è più urgente e l'impatto maggiore, come il Brasile,
         l'Indonesia, il Canada e diverse aree dell'Africa. La scelta di queste aree strategiche massimizza l'efficacia degli interventi di riforestazione e conservazione.</p>
-        <p><strong>Impegno per "100% Ocean Plastic Collect": La Lotta Contro l'Inquinamento Marino</strong>
+        <p><strong><span style= "color: #0a3b0a">Impegno per "100% Ocean Plastic Collect": La Lotta Contro l'Inquinamento Marino</span></strong>
         <br>L'inquinamento da plastica negli oceani è una delle minacce ambientali più visibili e gravi del nostro tempo. Caudalie ha affrontato questa sfida con un progetto dedicato,
         "100% Ocean Plastic Collect", lanciato nel 2020. Questa iniziativa non è solo un atto di pulizia, ma un modello di economia circolare e di coinvolgimento comunitario.
         Dal 2020, il programma ha permesso di raccogliere e riciclare un'impressionante quantità di 3.120 tonnellate di plastica.
@@ -180,7 +180,7 @@
     </div>
 </section>
 
-        <h3 class="Teamh3">Il nostro Team</h3>
+       <h3 class="Teamh3">Il nostro Team</h3>
 
         <section class="Team">
          <div class="image-container5">
@@ -189,17 +189,17 @@
             <div class="text-container5">
                 <p>
                   L'impegno di Caudalie per la sostenibilità non si limita ai prodotti e al pianeta, 
-                  ma si estende in modo significativo al suo team. L'azienda riconosce che i suoi dipendenti 
+                  ma si estende in modo significativo al suo team. <br>L'azienda riconosce che i suoi dipendenti 
                   sono il cuore pulsante delle sue operazioni e la forza motrice dietro ogni iniziativa sostenibile. 
                   Coinvolgere e supportare il personale è quindi un pilastro fondamentale della strategia aziendale.
-                  Programma di Onboarding Immersivo: Ogni nuovo dipendente partecipa a un programma di onboarding immersivo, 
+                  <br><strong><span style= "color: #05095e">Programma di Onboarding Immersivo</span></strong>: Ogni nuovo dipendente partecipa a un programma di onboarding immersivo, 
                   progettato per aiutarli a comprendere appieno la cultura aziendale, i valori di sostenibilità e la visione di Caudalie. 
                   Questo assicura che i nuovi assunti si sentano parte integrante del team fin dal primo giorno.
-                  Nel 2024, Caudalie ha lanciato un piano che ha permesso a oltre l'80% del personale francese idoneo di diventare azionista dell'azienda.
+                  <br>Nel 2024, Caudalie ha lanciato un piano che ha permesso a oltre l'80% del personale francese idoneo di diventare azionista dell'azienda.
                   Questa iniziativa non solo rafforza il senso di appartenenza e l'impegno a lungo termine dei dipendenti, 
                   ma li rende anche direttamente partecipi del successo e della crescita dell'azienda. 
                   Questo è un potente incentivo a contribuire al meglio delle proprie capacità.
-                  Caudalie continua a rafforzare il suo impegno coinvolgendo attivamente i suoi team e offrendo soluzioni concrete per un futuro più responsabile. 
+                  <br>Caudalie continua a rafforzare il suo impegno coinvolgendo attivamente i suoi team e offrendo soluzioni concrete per un futuro più responsabile. 
                   Questo approccio integrato, che valorizza le persone tanto quanto il pianeta e i prodotti, 
                   è ciò che rende la strategia di sostenibilità di Caudalie non solo ambiziosa, ma anche autentica e duratura.</p>
             </div>
